--- a/gulp/utils/gulp-sprite.mustache
+++ b/gulp/utils/gulp-sprite.mustache
@@ -16,7 +16,7 @@
     width: {{px.width}};
     height: {{px.height}};
 
-    background-position: {{px.offset_x}} {{px.offset_y}}
+    background-position: {{px.offset_x}} {{px.offset_y}};
   }
   {{/items}}
 }
